syntax = "proto3";

package cluster;

service Cluster {
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc SubmitProof(SubmitProofRequest) returns (SubmitProofResponse) {}
}

message GetTaskRequest {
    string prover_id = 1;
    int64 timestamp = 2; // UTC timestamp in milliseconds
    bytes signature = 3;
}
message GetTaskResponse {
    string task_id = 1;
    string circuit = 2; // TODO: use enum
    bytes witness = 3;
}

message SubmitProofRequest {
    string prover_id = 1;
    string task_id = 2;
    bytes proof = 3;
    int64 timestamp = 4; // UTC timestamp in milliseconds
    bytes signature = 5;
}
message SubmitProofResponse {
    bool valid = 1;
}
